<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.csi2_23.examen2eva.AddActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/txtAddIdentificator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddId"
        android:layout_weight="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtAddIdentificador"
        android:layout_weight="0" />

    <TextView
        android:text="@string/txtAddDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddDireccion"
        android:layout_weight="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtAddDireccion"
        android:layout_weight="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <TextView
                android:text="@string/txtAddLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAddLatitude"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edtAddLatitude"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <TextView
                android:text="@string/txtAddLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAddLongitude"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edtAddLongitude"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <Button
                android:text="@string/btnAutoRellenar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAutoRellenar"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Light.Button" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/txtAddComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddComentario"
        android:layout_weight="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edtAddComentario"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:text="@string/txtAddTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAddTipo"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinAddTipo"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:text="@string/btnAddOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddOk"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/btnAddCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddCancel"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</LinearLayout>
